// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NheTimeSlotCard MX should match snapshot 1`] = `
<Col
  key="VTS-0034139"
>
  <DetailedRadio
    dataTestId="nheTimeSlotCard"
    details={
      <React.Fragment>
        <div>
          10:30 AM - 11:00 AM Onsite - Recruiting Office at Amazon Distribution Center, 3230 International Place, Dupont, WA 98327
        </div>
      </React.Fragment>
    }
    name="nheTimeSlotCard"
    onChange={[Function]}
    titleText="Thursday, Aug 11th 2022"
  />
</Col>
`;

exports[`NheTimeSlotCard US should match snapshot 1`] = `
<Col
  key="VTS-0034139"
>
  <DetailedRadio
    dataTestId="nheTimeSlotCard"
    details={
      <React.Fragment>
        <div
          className="nheSpokenLanguage"
        >
          Spoken Language: English, Spanish
        </div>
        <div>
          10:30 AM - 11:00 AM Onsite - Recruiting Office at Amazon Distribution Center, 3230 International Place, Dupont, WA 98327
        </div>
      </React.Fragment>
    }
    name="nheTimeSlotCard"
    onChange={[Function]}
    titleText="Thursday, Aug 11th 2022"
  />
</Col>
`;
